# intetics-test-task

./: .env.template  .gitignore  Dockerfile  README.md  data.csv  docker-compose.yaml  pyproject.toml  test.py
backend/: .dockerignore  .env.template
backend/src/app/: config.py  main.py  types.py
backend/src/app/api/: schemas.py
backend/src/app/clients/: ai.py
backend/src/app/services/: __init__.py
frontend/: Dockerfile
frontend/src/: App.vue
frontend/src/services/: api.js
src/app/: config.py  di.py  main.py  types.py
src/app/api/: handlers.py  schemas.py
src/app/clients/: ai.py
src/app/services/: __init__.py
src/app/storages/: csv.py
tests/e2e/: test_api_ai_endpoints.py
tests/integration/: test_csv_storage.py
